--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# ========================================
-# Python / Django
-# ========================================
+# Python
 __pycache__/
 *.py[cod]
 *.pyo
@@ -11,55 +9,50 @@ __pycache__/
 dist/
 build/
 .eggs/
-.Python
-db.sqlite3
-media/
+
+# Virtual environment
+venv/
+env/
+.venv/
+ENV/
+
+# Django / Flask / FastAPI
 *.log
+db.sqlite3
+instance/
+*.db
 
-# Django specific
-staticfiles/
-local_settings.py
-
-# ========================================
-# Node / Frontend (JS, CSS, etc.)
-# ========================================
+# Node / Frontend
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# build outputs
-dist/
-build/
-*.cache
-*.tsbuildinfo
+# Environment variables
+*.env
+.env.*
+.envrc
+secrets.json
 
-# ========================================
-# Environments
-# ========================================
-.env
-.venv/
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# ========================================
-# OS generated files
-# ========================================
-.DS_Store
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# ========================================
-# IDE / Editors
-# ========================================
+# IDEs / Editors
 .vscode/
 .idea/
 *.swp
 *.swo
-*.swn
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Testing / Coverage
+.coverage
+htmlcov/
+.tox/
+.pytest_cache/
+.mypy_cache/
+.pyre/
+
+# Other
 *.bak
+*.tmp
